# Aegisub

./: .gitignore  BUILD.md  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
automation/v4-docs/: basic-function-interface.txt  progress-reporting.txt
automation/vapoursynth/: aegisub_vs.py
docs/: AssRocket-VSFilterMod-使用文档.md  hotkey_commands.md  摩卡追踪使用手册.md  摩卡追踪参数速查表.md  透视追踪使用手册.md
libaegisub/ass/: dialogue_parser.cpp  karaoke.cpp  string_codec.cpp  time.cpp
libaegisub/audio/: provider.cpp  provider_convert.cpp  provider_hd.cpp  provider_lock.cpp  provider_ram.cpp
libaegisub/common/: character_count.cpp  charset.cpp  charset_conv.cpp  dispatch.cpp  io.cpp  karaoke_matcher.cpp  mru.cpp  path.cpp  thesaurus.cpp  vfr.cpp  ycbcr.cpp
libaegisub/common/cajun/: reader.cpp
libaegisub/include/libaegisub/: fs.h  mru.h  option_value.h  path.h  signal.h  thesaurus.h  type_name.h  util.h  util_osx.h  ycbcr.h
libaegisub/include/libaegisub/ass/: time.h
libaegisub/include/libaegisub/audio/: provider.h
libaegisub/include/libaegisub/cajun/: elements.h
libaegisub/lua/: modules.cpp
libaegisub/lua/modules/: lfs.cpp
libaegisub/unix/: path.cpp  util.cpp
libaegisub/windows/: charset_conv_win.cpp  path_win.cpp  util_win.cpp
po/: LINGUAS  POTFILES  aegisub.pot  ar.po  bg.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fa.po  fi.po  fr_FR.po  gl.po  hu.po  id.po  it.po  ja.po  ko.po  make_pot.sh  meson.build  nl.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sr_RS.po  sr_RS@latin.po  uk_UA.po  vi.po  zh_CN.po  zh_TW.po
src/: MatroskaParser.c  MatroskaParser.h  aegisublocale.cpp  ass_attachment.h  ass_dialogue.cpp  ass_file.cpp  ass_file.h  ass_override.cpp  ass_parser.cpp  ass_style.cpp  ass_style.h  async_video_provider.cpp  async_video_provider.h  audio_box.cpp  audio_box.h  audio_colorscheme.cpp  audio_colorscheme.h  audio_controller.cpp  audio_controller.h  audio_display.cpp  audio_display.h  audio_karaoke.cpp  audio_karaoke.h  audio_player.cpp  audio_player_alsa.cpp  audio_player_dsound.cpp  audio_player_dsound2.cpp  audio_player_openal.cpp  audio_player_oss.cpp  audio_player_portaudio.cpp  audio_player_pulse.cpp  audio_player_xaudio2.cpp  audio_provider_avs.cpp  audio_provider_bestsource.cpp  audio_provider_factory.cpp  audio_provider_ffmpegsource.cpp  audio_provider_vs.cpp  audio_renderer_spectrum.cpp  audio_timing_dialogue.cpp  audio_timing_karaoke.cpp  (+163 more)
src/bitmaps/: manifest.respack
src/command/: app.cpp  audio.cpp  command.cpp  command.h  edit.cpp  grid.cpp  help.cpp  subtitle.cpp  time.cpp  tool.cpp  video.cpp  vis_tool.cpp
src/cube/: lut.hpp
src/include/: agi_pre.h  agi_pre_c.h
src/include/aegisub/: subtitles_provider.h  video_provider.h
src/libresrc/: default_config.json  default_hotkey.json  default_menu.json  default_menu_platform.json  libresrc.cpp  libresrc.h  meson.build
src/libresrc/osx/: default_config.json  default_hotkey.json  default_menu.json
src/mocha_motion/: motion_common.h  motion_config.cpp  motion_config.h  motion_data_handler.cpp  motion_data_handler.h  motion_dialog.cpp  motion_dialog.h  motion_handler.cpp  motion_handler.h  motion_line.cpp  motion_line.h  motion_math.h  motion_processor.cpp  motion_processor.h  motion_tags.cpp  motion_tags.h  motion_transform.cpp  motion_transform.h
src/perspective_motion/: perspective_config.cpp  perspective_config.h  perspective_data.cpp  perspective_data.h  perspective_dialog.cpp  perspective_dialog.h  perspective_math.cpp  perspective_math.h  perspective_processor.cpp  perspective_processor.h
src/res/: aegisub.exe.manifest  res.rc
subprojects/: avisynth.wrap  bestsource.wrap  boost.wrap  dav1d.wrap  ffmpeg.wrap  ffms2.wrap  ffnvcodec.wrap  freetype2.wrap  fribidi.wrap  harfbuzz.wrap  hunspell.wrap  icu.wrap  libass.wrap  libpng.wrap  mimalloc.wrap  nasm.wrap  uchardet.wrap  vapoursynth.wrap  vpl.wrap  wxWidgets.wrap  x264.wrap  zlib.wrap
subprojects/packagefiles/boost/: meson.build
subprojects/packagefiles/boost/libs/locale/: meson.build
subprojects/packagefiles/boost/libs/regex/: meson.build
subprojects/packagefiles/dav1d/: 0001.patch
subprojects/packagefiles/ffmpeg/: 0001.patch  0002.patch  0003.patch  0004.patch  0005.patch
subprojects/packagefiles/ffms2/: meson.build
subprojects/packagefiles/ffnvcodec/: meson.build
subprojects/packagefiles/icu/source/common/: meson.build
subprojects/packagefiles/icu/source/data/: meson.build
subprojects/packagefiles/icu/source/tools/toolutil/: meson.build
subprojects/packagefiles/mimalloc/: meson.build
subprojects/packagefiles/nasm/: meson.build
subprojects/packagefiles/uchardet/: meson.build
subprojects/packagefiles/uchardet/src/: meson.build
subprojects/packagefiles/vapoursynth/: meson.build
subprojects/packagefiles/vpl/: meson.build
subprojects/packagefiles/wxWidgets/: 0001-fix-owner-drawn-dark-mode-text.patch
subprojects/packagefiles/wxWidgets/src/png/: pngprefix.h
subprojects/packagefiles/x264/: 0001.patch  0002.patch
tests/: meson.build
tests/support/: stubs.cpp  tests_pre.h  tracking_data.txt
tests/tests/: abb_smart_test.cpp  audio.cpp  audit_fixes.cpp  auto4_lua.cpp  character_count.cpp  font_chooser.cpp  fs.cpp  hdr_video_audit.cpp  hotkey.cpp  image_video.cpp  inline_string_encoding.cpp  karaoke_syllable.cpp  mocha_motion.cpp  path.cpp  perspective_integration_test.cpp  perspective_math_test.cpp  perspective_orgmode3_debug.cpp  perspective_processor_test.cpp  style_rename.cpp  syntax_highlight.cpp  text_file_writer.cpp  time.cpp  ui_regression_audit.cpp  version_check.cpp  ycbcr.cpp
tools/: osx-bundle.sh  setup-vs-plugins.ps1  version.ps1  version.sh  win-installer-setup.ps1
