option('alsa', type : 'feature', description : 'ALSA audio output')
option('openal', type : 'feature', description : 'OpenAL audio output')
option('libpulse', type : 'feature', description : 'PulseAudio audio output')
option('portaudio', type : 'feature', description : 'PortAudio audio output')
option('directsound', type : 'feature', description : 'DirectSound audio output')
option('xaudio2', type : 'feature', description : 'XAudio2 audio output')
option('default_audio_output', type : 'combo', choices : ['auto', 'ALSA', 'OpenAL', 'PulseAudio', 'PortAudio', 'DirectSound', 'XAudio2'], description : 'Default audio output')

option('ffms2', type : 'feature', description : 'FFMS2 video source')
option('avisynth', type : 'feature', description : 'AviSynth video source')
option('bestsource', type : 'feature', description : 'BestSource video source')
option('vapoursynth', type : 'feature', description : 'VapourSynth video source')

option('fftw3', type : 'feature', description : 'FFTW3 support')
option('hunspell', type : 'feature', description : 'Hunspell spell checker')
option('uchardet', type : 'feature', description : 'uchardet character encoding detection')
option('csri', type : 'feature', description : 'CSRI support')

option('system_luajit', type : 'boolean', value : false, description : 'Force using system luajit')
option('local_boost', type : 'boolean', value : false, description : 'Force using locally compiled Boost')
option('fallback_nasm', type : 'boolean', value : false, description : 'Force using fallback nasm')

option('wx_version', type : 'string', value : '3.3.0', description : 'The minimum wxWidgets version to use')

option('credit', type : 'string', value : '', description : 'Build credit shown in program title')

option('version', type : 'string', value : '3.2.2', description : 'Override project version for release builds')

option('enable_update_checker', type : 'boolean', value : true, description : 'Enable the update checker')
option('update_server', type : 'string', value : 'https://api.github.com', description : 'Server to use for the update checker')
option('update_url', type : 'string', value : '/repos/mojie126/Aegisub/releases/latest', description : 'Base path to use for the update checker')

option('build_osx_bundle', type : 'boolean', value : false, description : 'Package Aegisub.app on OSX')
option('build_appimage', type : 'boolean', value : false, description : 'Prepare for AppImage packaging')
option('official_release', type : 'boolean', value : false, description : 'Mark this as an official release build')
option('tests', type : 'boolean', value : true, description : 'Build and register unit tests')
